# rcon-palworld

./: .gitignore  Cargo.toml  README.md
rcon/src/: client.rs  packet.rs
rcon_cli/: Cargo.toml
rcon_cli/distribution/config/: rcon-cli.ini
rcon_cli/distribution/debian/: rcon_cli.service
rcon_cli/src/: command.rs  main.rs  observer.rs  player.rs
